--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 }
 
 nav .navbar-brand {
-  padding-left: 30px;
+  padding-left: 50px;
   font-weight: bold;
   animation: movedown 1s linear 1;
   animation-delay: 1.5s;
@@ -32,47 +32,68 @@ nav .navbar-brand {
 }
 
 .collapse ul li a {
-  padding-right: 50px;
-  margin-right: 15pt;
+  padding-right: 100px;
+  margin-right: -20px;
   font-weight: bold;
+  color: white;
+  text-decoration: none;
+}
+.collapse ul li a:hover {
+  color: rgb(113, 210, 255);
+  cursor: pointer;
 }
 
-.collapse ul.navbar-nav li.nav-item1 {
+.collapse ul.navbar-nav li.nav-item a.nav-link1 {
   animation: movedown 1s linear 1;
   animation-delay: 2s;
   visibility: hidden;
   animation-fill-mode: forwards;
 }
-.collapse ul.navbar-nav li.nav-item2 {
+.collapse ul.navbar-nav li.nav-item a.nav-link2 {
   animation: movedown 1s linear 1;
   animation-delay: 2.5s;
   visibility: hidden;
   animation-fill-mode: forwards;
 }
-.collapse ul.navbar-nav li.nav-item3 {
+.collapse ul.navbar-nav li.nav-item a.nav-link3 {
   animation: movedown 1s linear 1;
   animation-delay: 3s;
   visibility: hidden;
   animation-fill-mode: forwards;
 }
-.collapse ul.navbar-nav li.nav-item4 {
+.collapse ul.navbar-nav li.nav-item a.nav-link4 {
   animation: movedown 1s linear 1;
   animation-delay: 3.5s;
   visibility: hidden;
   animation-fill-mode: forwards;
+  /* border-bottom: 2px solid #0d6dfd8a;
+  border-radius: 5px; */
 }
+
+/* .collapse ul.navbar-nav li.nav-item4:hover,
+.collapse ul.navbar-nav li.nav-item4:focus {
+  color: rgb(243, 118, 139);
+  cursor: pointer;
+} */
 
 /* #Project {
   background-color: #ffffff5b;
 } */
 
 section {
-  padding-top: 4rem;
+  padding-top: 5rem;
 }
 
 svg {
-  color: #0d7dfd46;
-  padding-bottom: -5rem;
+  color: #569ef0;
+}
+.svg_jumbotron {
+  color: #569ef0ec;
+  margin-left: 50;
+  margin-right: 50;
+  margin-top: -400px;
+  width: 100%;
+  position: absolute;
 }
 
 footer {
@@ -80,7 +101,20 @@ footer {
   margin-top: -1px;
 }
 
+.jumbotron {
+  border: 2px solid transparent;
+  padding: 25px;
+  background: url(img/BG/jae-bano-Xbf_4e7YDII-unsplash.jpg);
+  background-size: 500px 500px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin-top: -20px;
+}
+
 .jumbotron img {
+  margin-bottom: auto;
+  margin-top: 50px;
   animation: zoomin 1s linear 1;
   animation-delay: 3.8s;
   visibility: hidden;
@@ -115,10 +149,10 @@ footer {
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   font-weight: bolder bold;
   margin-top: 4pt;
-  font-size: 80px;
+  font-size: 30pt;
   margin-left: -10px;
   color: transparent;
-  -webkit-text-stroke: 1px #363636;
+  -webkit-text-stroke: 1px #b1afaf;
   background: url(img/back.png);
   background-color: #0d6dfdd3;
   -webkit-background-clip: text;
@@ -133,7 +167,7 @@ footer {
 }
 
 .container h2 {
-  margin-top: 8px;
+  margin-top: 15px;
   border-bottom: #000000;
   border-bottom-style: double;
   border-bottom-width: medium;
